[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["welkre <leogerte3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = {extras = ["standart"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
